Ignored and removed workspace.xml

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@ raw-assets/3dplayer_IGNORE/player/Player.blend1
 wick-john-unity-project/Assets/Lib/
 
 wick-john-unity-project/Assets/Spine/
+
+the-hidden-unity-project/.idea/.idea.the-hidden-unity-project/.idea/workspace.xml
