Added the local arms hidden model to unity

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@ wick-john-unity-project/Assets/Lib/
 wick-john-unity-project/Assets/Spine/
 
 the-hidden-unity-project/.idea/.idea.the-hidden-unity-project/.idea/workspace.xml
+
+the-hidden-unity-project/.idea/.idea.the-hidden-unity-project/.idea/contentModel.xml
